--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "path-convert",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Windowsの共有パスをMac用にコンバートする",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "pack:osx": "build --mac --x64"
   },
-  "author": "lintaroken",
+  "author": "Kentaro Hayashi",
   "license": "MIT",
   "build": {
     "appId": "com.woodses.pathconvert",
